--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.weights filter=lfs diff=lfs merge=lfs -text
 darknet53.conv.74 filter=lfs diff=lfs merge=lfs -text
 *.pth filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
